grobid details added